fixtures/frontend/milestone-2/invalid/unsupported-recurrence-target/main.aivi
fun step #value =>
    value

val broken : Int =
    0
     @|> step
     <|@ step
